homer/homer-prod-1/argo/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: homer-prod-1-middleware-cors
  namespace: homer-prod-1
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
