homer/homer-prod-1/argo/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homer-prod-1-ingressroute
  namespace: homer-prod-1
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`homer-prod-1.kube-prod-1.home.clcreative.de`)
    kind: Rule
    services:
      - name: homer-prod-1-service
        port: 8080
    middlewares:
      - name: homer-prod-1-middleware-cors
  tls: 
    secretName: homer-prod-1-tls-secret
    domains:
    - main: homer-prod-1.kube-prod-1.home.clcreative.de
